# akshrava

./: .env.example  .gitignore  CODEX.md  Important Architecture.md  NOT_NOW.md  README.md  RECYCLED_PHONE_ASSISTIVE_VISION_BUILD_PLAN.md  akshrava.xml  akshrava.yaml
.github/workflows/: android-compatibility.yml  android-pipeline.yml  ci.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
backend/: .coverage  .gcloudignore  Dockerfile  Dockerfile.gpu  Dockerfile.worker-cpu  README.md  alembic.ini  cloudbuild.api.yaml  cloudbuild.worker-cpu.yaml  pyproject.toml  test_backend.py
backend/akshrava_backend/: __init__.py  alert_policy.py  application.py  auth.py  cloud_fallback.py  composer.py  config.py  coordination.py  detector.py  domain.py  gcp_storage.py  hazards.py  logging_util.py  main.py  metrics.py  model_integrity.py  protocol.py  rate_limit.py  redis_util.py  service.py  session_admission.py  session_handler.py  storage.py  tracing.py  tracker.py  worker.py
backend/migrations/: env.py
backend/migrations/versions/: 20260719_01_initial_schema.py  20260721_01_reference_height_px.py
backend/tests/: test_apk_download_site.py  test_application.py  test_auth.py  test_cloud_fallback.py  test_composer.py  test_config.py  test_coordination.py  test_detector.py  test_gcp_storage.py  test_gcp_storage_validation.py  test_hazards.py  test_iac.py  test_iac_structure.py  test_logging_util.py  test_metrics.py  test_phase0_replay.py  test_protocol.py  test_rate_limit.py  test_redis_util.py  test_release_version.py  test_remote_worker.py  test_service.py  test_session_admission.py  test_session_soak.py  test_storage.py  test_storage_migrations.py  test_tracker.py  test_websocket.py
cloud/gcp/: app.tf  database.tf  iam.tf  monitoring.tf  outputs.tf  providers.tf  terraform.tfvars.example  tls.tf  variables.tf
cloud/local/: docker-compose.yml  prometheus-alerts.yml
docs/: ANDROID.md  ANDROID_DEVICE_SCOPE.md  CLOUD_IMAGE_FALLBACK.md  DEPLOYMENT.md  FIELD_GUIDE.md  OPERATIONS.md  PRIVACY.md  PRODUCTION_READINESS_REMEDIATION.md  PROTOCOL.md  PROVISIONING_CHECKLIST.md  README.md  RELEASE_AND_VERIFICATION.md  RELEASE_GATE.md  RELEASE_PROCESS.md  TRIAL_PROTOCOL.md
gcp/: .terraform.lock.hcl  app.tf  backend.tf.example  cloud_armor.tf  database.tf  iam.tf  monitoring.tf  outputs.tf  providers.tf  secrets.tf  terraform.tfvars.bak  terraform.tfvars.example  terraform.tfvars.production.example  tls.tf  variables.tf  vpc.tf  worker_ha.tf
infra/: .env.example  Caddyfile  alertmanager.yml  docker-compose.yml  prometheus-alerts.yml  prometheus.yml
scripts/: backup_postgres.sh  build_apk_download_site.py  build_gcp_images.sh  check_release_version.py  cloud_preflight.sh  e2e_android_gcp.sh  e2e_android_protocol_gcp.sh  e2e_gcp_pilot.sh  gcp_migrate_then_deploy.sh  gcp_preflight.sh  install_android_debug.sh  install_android_debug_full.sh  install_worker_weights.sh  mint_device_token.py  mint_device_token_gcp.sh  print_android_pilot_provisioning.sh  revoke_device.py  rotate_jwt_rs256.sh  run_android_instrumentation.sh  run_backend_dev.sh  soak_session.py  test_backend.sh  test_cloud_preflight.sh  upsert_calibration_profile.py  validate_compose_config.sh  verify_phases.sh  watch_detection.sh
terraform/: app.tf  database.tf  iam.tf  providers.tf  secrets.tf  storage.tf  variables.tf  vpc.tf
training/: README.md  akshrava.yaml
(+62 files in other folders)
