[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "akshrava-backend"
version = "0.1.0"
description = "Safety-bounded WebSocket backend for the Akshrava assistive vision pilot"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1",
  "SQLAlchemy>=2.0,<3",
  "aiosqlite>=0.20,<1",
  "asyncpg>=0.29,<1",
  "PyJWT>=2.8,<3",
  "pillow>=10,<12",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.3,<9"]
aws = ["boto3>=1.35,<2"]
gcp = ["google-cloud-vision>=3.8,<4"]
azure = ["azure-ai-vision-imageanalysis>=1.0,<2"]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.23,<1", "httpx>=0.27,<1", "ruff>=0.5,<1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.setuptools]
packages = ["akshrava_backend"]
