[build-system]
requires = ["setuptools>=83"]
build-backend = "setuptools.build_meta"

[project]
name = "akshrava-backend"
version = "0.2.12"
description = "Safety-bounded WebSocket backend for the Akshrava assistive vision pilot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1",
  "SQLAlchemy>=2.0,<3",
  "aiosqlite>=0.20,<1",
  "asyncpg>=0.29,<1",
  "psycopg2-binary>=2.9,<3",
  "PyJWT>=2.8,<3",
  "cryptography>=46.0.6,<49",
  "pillow>=12.3.0,<13",
  "alembic>=1.13,<2",
  "redis>=5.0,<6",
  "httpx>=0.27,<1",
  "opentelemetry-api>=1.20,<2",
  "opentelemetry-sdk>=1.20,<2",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.3,<9"]
aws = ["boto3>=1.35,<2"]
gcp = ["google-cloud-vision>=3.8,<4", "google-cloud-secret-manager>=2.16,<3", "google-cloud-storage>=2.10,<3"]
azure = ["azure-ai-vision-imageanalysis>=1.0,<2"]
dev = ["pytest>=9.0.3,<10", "pytest-asyncio>=1.3,<2", "ruff>=0.5,<1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools]
packages = ["akshrava_backend"]
